--- a/style.css
+++ b/style.css
@@ -11,17 +11,18 @@ padding-right:	30px;
 }
 
 .content {
-display:		flex;
+display:				flex;
 }
+
 #leftColumn {
 background:		#F0F8FF;
 border:				2px solid #DAE1E7;
 font-family:		Helvetica, sans-serif;
 float:					left;
-width:				12.5%;
+width:				250px;
 margin-left:		0px;
 margin-right:		auto;
-padding:			0px 10px;
+padding:			0px 10px 10px 10px;
 }
 
 #leftColumnFirstP {
@@ -29,12 +30,13 @@ color:				#010282;
 font-size:			.75rem;
 }
 #speechImage {
-width:				100%;
+width:				95%;
+height:				80%;
 }
 
 #centerColumn {
 font-family:		sans-serif;
-width:				75%;
+width:				70%;
 margin:				0px auto;
 padding:			0px 10px;
 }
@@ -48,13 +50,17 @@ font-size:		20px;
 }
 
 #centerList {
-list-style:			none;
+margin-left:	5rem;
+list-style:		circle;
+}
+
+#centerList ul {
 
 }
 
 #rightColumn {
 font-family:		sans-serif;
-width:				12.5%;
+width:				250px;
 height:				60%;
 background:		#F5F5DC;
 color:				#040081;
@@ -74,9 +80,14 @@ font-style:			italic;
 #footer {
 background:		#DFDFDF;
 font-family:		sans-serif;
+font-size:			.75rem;
 color:				#1A1B8F;
 margin:				10px auto;
 text-align:			center;
 padding:			30px 0px 50px 0px;
 
+}
+
+#referenceLink {
+text-decoration:	none;
 }
